# Neuron

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Configuration.bat  DEVELOPER.md  HANDOFF.md  INSTALL-AI.it.md  INSTALL-AI.md  INSTALL.md  Install-GUI.bat  MANIFEST.in  MINIMAX-BRAINSTORM.md  Neuron-Manage.bat  Neuron-Setup.bat  Neuron.bat  Neuron5Config.bat  README.md  RELEASE_PLAN.md  TASKLIST.md  build-and-install.bat  constraints.txt  install-gui.sh  install.bat  install.cmd  install.command  install.ps1  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
clients/: claude-code.example.json  claude-desktop.example.json  cline-roocode.example.json  cursor.example.json  generic-mcp.example.json  opencode.example.json  vscode.example.json  zed.example.json
clients/claude-code-hook/: neuron_sessionstart_hook.py
clients/cowork-plugin/neuron-guard/: README.md
clients/cowork-plugin/neuron-guard/.claude-plugin/: plugin.json
clients/cowork-plugin/neuron-guard/hooks/: hooks.json  neuron_handshake.py
clients/cowork-plugin/neuron-guard/skills/neuron-usage/: SKILL.md
clients/opencode-plugin/: neuron-handshake.mjs
docs/: BRIDGE.md  CORE_AUDIT.md  DEVELOPER.md  ENHANCEMENTS-2026-07.md  RELEASE_PLAN.md  RELEASING.md  TEAM.md
docs/design/: 00-neuron-bomb-roadmap.md  01-embedding-model.md  02-vectors-consolidation.md  03-stimulus-engine.md  04-drift-sleep.md  05-core-efficiency-installer-plan.md  06-server-modularization.md  07-universal-installer.md  BACKLOG.md
docs/releases/: v5.1.0.md
installer/: NeuronInstaller.cs  README.md  build-installer.ps1
knowledge/: base_knowledge.db  base_knowledge.db.prerepair-20260630
knowledge/self-vault/: Neuron.md  auto.md  confirm.md  consolidate.md  contesti.md  dedup.md  export.md  extract.md  find_candidates.md  flash.md  forgotten.md  get_context.md  help.md  list_contexts.md  merge.md  pre_turn.md  prune.md  reset.md  salienza.md  skill.md  spreading_activation.md  status.md  store_turn.md  summary.md  switch_context.md  vector_search.md
neuron-3.3.0/: LICENSE  MANIFEST.in  PKG-INFO
neuron-3.3.0/src/neuron/: __main__.py  db.py  models.py  registry.py  server.py
scripts/: _neuron_paths.ps1  _neuron_utils.ps1  bench_embed.py  bridge.py  build-and-install.bat  check.bat  check.ps1  check_cloud_config.py  configuration.ps1  connect_turso.py  deploy.bat  deploy.ps1  generate_graph_html.py  import_vault.py  init_cloud.py  neuron-summary.bat  neuron-summary.ps1  neuron5-config.ps1  neuron_console.py  populate_vectors.py  reembed.py  run-tests.bat  run_mcp.bat  run_tests.ps1  seed_repair_links.py  seed_vault.py  smoke_cloud.py  uninstall.ps1
skills/: SKILL_base.md  SKILL_full.md  auto-context.md  neuron-opener.md  playbook.md
skills/neuron-curated-memory/: SKILL.md
src/neuron/: __init__.py  __main__.py  _env.py  bridge.py  clients.py  config.py  connect.py  console.py  curation.py  db.py  engine.py  extraction.py  funnel.py  gui.py  init.py  manage.py  models.py  paths.py  project.py  registry.py  search.py  server.py  setup.py  shortcut.py  stimulus.py  tunnel.py
src/neuron/_gm_vendor/: gray_matter-1.1.2-py3-none-any.whl
src/neuron/clients/claude-code-hook/: neuron_sessionstart_hook.py
src/neuron/clients/cowork-plugin/neuron-guard/hooks/: neuron_handshake.py
src/neuron/data/: .gitkeep  base_knowledge.db
src/neuron/skills/: SKILL_base.md  SKILL_full.md  auto-context.md  neuron-opener.md  playbook.md
src/neuron/skills/neuron-curated-memory/: SKILL.md
tests/: _mockdeps.py  conftest.py  test_bench_embed.py  test_clients.py  test_composite_ranking.py  test_connect_toggle.py  test_connect_turso.py  test_consolidate.py  test_consolidate_tool.py  test_core.py  test_curation.py  test_drift.py  test_embedding_config.py  test_episodes.py  test_fivefix.py  test_gm_register.py  test_hebbian.py  test_init.py  test_introspect_trustaware.py  test_l2_open_guard.py  test_manage.py  test_model_guard.py  test_project.py  test_prune_dryrun.py  test_reembed.py  test_refs_table.py  test_reset_guard.py  test_search_cache.py  test_server.py  test_setup.py  test_skills_resources.py  test_sleep.py  test_spreading.py  test_stimulus_piggyback.py  test_stimulus_v2.py  test_trust.py
tests/fixtures/: bench_pairs_en_it.jsonl
