[project]
name = "neuron"
version = "3.3.0"
description = "Neuron - persistent semantic memory for AI (semantic graph + vector search with Turso)"
requires-python = ">=3.10"
license = { text = "PolyForm Noncommercial License 1.0.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
authors = [
    { name = "Claudio C." },
]
keywords = ["mcp", "semantic-memory", "vector-embedding", "turso", "graph"]

dependencies = [
    "mcp>=1.28.0",
    "pyturso>=0.6.1",
    "fastembed>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
cloud = [
    "libsql-client>=0.3.1",
]

[project.scripts]
neuron-mcp = "neuron.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
